Add updated workbook and outputs.

--- a/workbook.ipynb
+++ b/workbook.ipynb
@@ -6,32 +6,9 @@
    "source": [
     "# Road Trip - McDonalds\n",
     "\n",
-    "The tweet that started it all:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<blockquote class=\"twitter-tweet\" data-lang=\"en\"><p lang=\"en\" dir=\"ltr\">I wonder how many McDonald&#39;s we&#39;ve passed on our way North... <a href=\"https://twitter.com/hashtag/ATXtoMSP?src=hash&amp;ref_src=twsrc%5Etfw\">#ATXtoMSP</a></p>&mdash; ️️Ryan Larson (@ryan_p_larson) <a href=\"https://twitter.com/ryan_p_larson/status/1075837060219629568?ref_src=twsrc%5Etfw\">December 20, 2018</a></blockquote>\n",
-       "<script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<blockquote class=\"twitter-tweet\" data-lang=\"en\"><p lang=\"en\" dir=\"ltr\">I wonder how many McDonald&#39;s we&#39;ve passed on our way North... <a href=\"https://twitter.com/hashtag/ATXtoMSP?src=hash&amp;ref_src=twsrc%5Etfw\">#ATXtoMSP</a></p>&mdash; ️️Ryan Larson (@ryan_p_larson) <a href=\"https://twitter.com/ryan_p_larson/status/1075837060219629568?ref_src=twsrc%5Etfw\">December 20, 2018</a></blockquote>\n",
-    "<script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
+    "The tweet that started it all:\n",
+    "\n",
+    "![Inspiration](inspiration.png)"
    ]
   },
   {
@@ -50,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +50,7 @@
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import gpxpy\n",
+    "from gpxpy.geo import Location\n",
     "from shapely.geometry import Point, LineString\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -81,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +237,7 @@
        "4  3006 Mountain View Dr, Anchorage,AK, (907) 274...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +271,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +455,7 @@
        "3923            POINT (-93.59987 41.72754)  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +567,7 @@
        "4  30.23118 -97.78982"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +647,7 @@
        "Name: intersects, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +895,7 @@
     "\n",
     "# show\n",
     "#plt.tight_layout();\n",
-    "plt.savefig('./road-trip-mcdonalds.png', facecolor='white', bbox_inches='tight', pad_inches=0.15, dpi=108)"
+    "plt.savefig('./road-trip-mcdonalds.png', facecolor='white', bbox_inches='tight', pad_inches=0.15, dpi=96)"
    ]
   },
   {
@@ -933,16 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gpxpy.geo import Location"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1133,7 @@
        "4003   [trkpt:41.65209,-93.7365@None@None]     929.823680  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1211,7 @@
        "2                 10                 2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
